Version 6 (#356)
* Java 17 as minimum supported version

* Cleanup Semver

* Apply spotless

* Apply spotless

* Cleanup build

* Cleanup build

* Cleanup semver javadoc

* Cleanup

* Cleanup

* Cleanup

* Cleanup

* Cleanup

* Cleanup

* Cleanup

* Cleanup

* Cleanup ranges

* Cleanup ranges

* Cleanup ranges

* Processors refactor and javadocs

* Cleanup tests

* Cleanup

* Add CONTRIBUTING.md

* Cleanup README.md

* Cleanup

* Cleanup README.md

* Cleanup README.md

* Add mising javadocs

* Coverage

* Coverage

* Coverage