@@ -1,28 +1,31 @@
 package org.semver4j;
 
-import org.jspecify.annotations.NullMarked;
-import org.jspecify.annotations.Nullable;
-import org.semver4j.internal.*;
-import org.semver4j.internal.Comparator;
-import org.semver4j.internal.StrictParser.Version;
-
-import java.util.*;
-import java.util.function.Function;
-
 import static java.lang.String.join;
 import static java.util.Collections.emptyList;
 import static java.util.Objects.hash;
 import static java.util.Objects.requireNonNull;
 
-/**
- * Semver is a tool that provides useful methods to manipulate versions that follow the "semantic versioning"
- * specification (see <a href="http://semver.org">semver.org</a>).
- */
-@NullMarked
-public class Semver implements Comparable<Semver> {
-    public static final Semver ZERO = new Semver("0.0.0");
+import java.util.Collection;
+import java.util.List;
+import java.util.Locale;
+import java.util.function.Function;
+import org.jspecify.annotations.Nullable;
+import org.semver4j.internal.*;
+import org.semver4j.internal.VersionParser.Version;
+import org.semver4j.range.RangeExpression;
+import org.semver4j.range.RangeList;
+import org.semver4j.range.RangeListFactory;
 
-    private final String originalVersion;
+/**
+ * {@code Semver} is a tool that provides useful methods to manipulate versions that follow the "semantic versioning"
+ * specification (see <a href="http://semver.org">semver.org</a>).
+ *
+ * <p>This implementation adheres to the SemVer 2.0.0 specification and provides a comprehensive API for version
+ * parsing, comparison, manipulation, and validation.
+ */
+public class Semver implements Comparable<Semver> {
+    /** A constant {@link Semver} version object representing {@code 0.0.0}. */
+    public static final Semver ZERO = new Semver("0.0.0");
 
     private final int major;
     private final int minor;
@@ -32,16 +35,23 @@ public class Semver implements Comparable<Semver> {
 
     private final String version;
 
-    public Semver(final String version) {
-        this.originalVersion = version.trim();
+    /**
+     * Constructs a new {@code Semver} instance by parsing the provided version string.
+     *
+     * @param version the version string to parse
+     * @throws NullPointerException if the version is {@code null}
+     * @throws IllegalArgumentException if the version string cannot be parsed according to SemVer specification
+     */
+    public Semver(String version) {
+        requireNonNull(version, "version must not be null");
 
-        Version parsedVersion = StrictParser.parse(this.originalVersion);
+        Version parsedVersion = VersionParser.parse(version.trim());
 
-        major = parsedVersion.getMajor();
-        minor = parsedVersion.getMinor();
-        patch = parsedVersion.getPatch();
-        preRelease = parsedVersion.getPreRelease();
-        build = parsedVersion.getBuild();
+        major = parsedVersion.major();
+        minor = parsedVersion.minor();
+        patch = parsedVersion.patch();
+        preRelease = parsedVersion.preRelease();
+        build = parsedVersion.build();
 
         this.version = new Builder()
                 .withMajor(major)
@@ -53,13 +63,12 @@ public class Semver implements Comparable<Semver> {
     }
 
     /**
-     * Try to parse string as semver.
+     * Try to parse string as a semver.
      *
      * @param version version string to parse
-     * @return {@link Semver} when done, {@code null} otherwise
+     * @return {@link Semver} when successfully parsed, {@code null} otherwise
      */
-    @Nullable
-    public static Semver parse(final @Nullable String version) {
+    public static @Nullable Semver parse(@Nullable String version) {
         if (version == null) {
             return null;
         }
@@ -71,13 +80,14 @@ public class Semver implements Comparable<Semver> {
     }
 
     /**
-     * Coerce string into semver if is possible.
+     * Coerce string into semver if possible.
      *
-     * @param version version to coerce
-     * @return {@link Semver} if can coerce version, {@code null} otherwise
+     * <p>This method attempts to transform non-standard version strings into valid SemVer format before parsing.
+     *
+     * @param version version string to coerce
+     * @return {@link Semver} if coercion and parsing succeed, {@code null} otherwise
      */
-    @Nullable
-    public static Semver coerce(final @Nullable String version) {
+    public static @Nullable Semver coerce(@Nullable String version) {
         if (version == null) {
             return null;
         }
@@ -87,100 +97,115 @@ public class Semver implements Comparable<Semver> {
             return semver;
         }
 
-        String coerce = Coerce.coerce(version);
-        return parse(coerce);
+        String coercedVersion = Coerce.coerce(version);
+        return parse(coercedVersion);
     }
 
     /**
-     * Checks is given string version is valid.
+     * Checks if a given string version is valid, according to SemVer specification.
      *
-     * @param version version to check
-     * @return {@code true} if is valid version, {@code false} otherwise
+     * @param version version string to check
+     * @return {@code true} if it is a valid version, {@code false} otherwise
      */
-    public static boolean isValid(final @Nullable String version) {
+    public static boolean isValid(@Nullable String version) {
         return parse(version) != null;
     }
 
     /**
-     * Returns builder instance to create semver.
+     * Returns builder instance to create {@code Semver} object.
      *
-     * @since 5.3.0
+     * @return a new {@link Builder} instance
+     * @since 6.0.0
      */
-    public static Builder of() {
+    public static Builder builder() {
         return new Builder();
     }
 
     /**
-     * Returns a programmatically created basic {@link Semver} object.
+     * Returns a programmatically created basic {@link Semver} builder with the specified version components.
      *
-     * @param major version to set
-     * @param minor version to set
-     * @param patch version to set
-     * @return basic {@link Semver} object
+     * @param major major version component
+     * @param minor minor version component
+     * @param patch patch version component
+     * @return a {@link Builder} initialized with the specified version components
      * @since 5.3.0
      */
-    public static Semver of(int major, int minor, int patch) {
-        return new Builder()
-                .withMajor(major)
-                .withMinor(minor)
-                .withPatch(patch)
-                .toSemver();
+    public static Builder of(int major, int minor, int patch) {
+        return builder().withMajor(major).withMinor(minor).withPatch(patch);
     }
 
     /**
-     * Returns the version.
+     * Returns a programmatically created basic {@link Semver} object with the specified version components.
      *
-     * @return version
+     * @param major major version component
+     * @param minor minor version component
+     * @param patch patch version component
+     * @return a {@link Semver} instance with the specified version components
+     * @since 6.0.0
+     */
+    public static Semver create(int major, int minor, int patch) {
+        return of(major, minor, patch).build();
+    }
+
+    /**
+     * Returns the complete version string.
+     *
+     * @return the full version string in SemVer format
      */
     public String getVersion() {
         return version;
     }
 
     /**
-     * Returns the major part of the version.
-     * Example: for "1.2.3" = 1
+     * Returns the {@code major} part of the version.
      *
-     * @return the major part of the version
+     * <p>Example: for {@code 1.2.3} = {@code 1}
+     *
+     * @return the {@code major} part of the version
      */
     public int getMajor() {
         return major;
     }
 
     /**
-     * Returns the minor part of the version.
-     * Example: for "1.2.3" = 2
+     * Returns the {@code minor} part of the version.
      *
-     * @return the minor part of the version
+     * <p>Example: for {@code 1.2.3} = {@code 2}
+     *
+     * @return the {@code minor} part of the version
      */
     public int getMinor() {
         return minor;
     }
 
     /**
-     * Returns the patch part of the version.
-     * Example: for "1.2.3" = 3
+     * Returns the {@code patch} part of the version.
      *
-     * @return the patch part of the version
+     * <p>Example: for {@code 1.2.3} = {@code 3}
+     *
+     * @return the {@code patch} part of the version
      */
     public int getPatch() {
         return patch;
     }
 
     /**
-     * Returns the pre-release of the version.
-     * Example: for "1.2.3-beta.4+sha98450956" = {"beta", "4"}
+     * Returns the {@code pre-release} identifiers of the version.
      *
-     * @return the pre-release of the version
+     * <p>Example: for {@code 1.2.3-beta.4+sha98450956} = {@code ["beta", "4"]}
+     *
+     * @return the list of {@code pre-release} identifiers, empty if none exist
      */
     public List<String> getPreRelease() {
         return preRelease;
     }
 
     /**
-     * Returns the build of the version.
-     * Example: for "1.2.3-beta.4+sha98450956" = "sha98450956"
+     * Returns the {@code build} identifiers of the version.
      *
-     * @return the build of the version
+     * <p>Example: for {@code 1.2.3-beta.4+sha98450956} = {@code ["sha98450956"]}
+     *
+     * @return the list of {@code build} identifiers, empty if none exist
      */
     public List<String> getBuild() {
         return build;
@@ -188,387 +213,430 @@ public class Semver implements Comparable<Semver> {
 
     /**
      * Determines if the current version is stable or not.
-     * Stable version have a major version number <a href="https://semver.org/#spec-item-4">strictly positive</a>
-     * and no <a href="https://semver.org/#spec-item-9">pre-release tokens</a>.
      *
-     * @return true if the current version is stable
+     * <p>Stable versions have a {@code major} version number <a href="https://semver.org/#spec-item-4">strictly
+     * positive</a> and no <a href="https://semver.org/#spec-item-9">pre-release identifiers</a>.
+     *
+     * @return {@code true} if the current version is stable, {@code false} otherwise
      */
     public boolean isStable() {
         return major > 0 && preRelease.isEmpty();
     }
 
     /**
-     * Increments major to the next closest version.
+     * Increments a {@code major} version component to the next closest version.
      *
-     * @return new incremented semver
+     * <p>This resets {@code minor} and {@code patch} to 0 and removes {@code pre-release} and {@code build}
+     * identifiers.
+     *
+     * @return new {@link Semver} with an incremented {@code major} version
      */
     public Semver nextMajor() {
         return Modifier.nextMajor(this);
     }
 
     /**
-     * Increments major with one.
+     * Increments a {@code major} version component by one.
      *
-     * @return new incremented semver
+     * @return new {@link Semver} with an incremented {@code major} version
      */
     public Semver withIncMajor() {
         return withIncMajor(1);
     }
 
     /**
-     * Increments major with defined number.
+     * Increments {@code major} version component by the specified amount.
      *
-     * @param number how many major should be incremented
-     * @return new incremented semver
+     * @param number the amount by which to increment the {@code major} version
+     * @return new {@link Semver} with an incremented {@code major} version
      */
     public Semver withIncMajor(int number) {
         return Modifier.withIncMajor(this, number);
     }
 
     /**
-     * Increments minor to the next closest version.
+     * Increments a {@code minor} version component to the next closest version.
      *
-     * @return new incremented semver
+     * <p>This resets a {@code patch} to 0 and removes {@code pre-release} and build identifiers.
+     *
+     * @return new {@link Semver} with an incremented {@code minor} version
      */
     public Semver nextMinor() {
         return Modifier.nextMinor(this);
     }
 
     /**
-     * Increments minor with one.
+     * Increments {@code minor} version component by one.
      *
-     * @return new incremented semver
+     * @return new {@link Semver} with an incremented {@code minor} version
      */
     public Semver withIncMinor() {
         return withIncMinor(1);
     }
 
     /**
-     * Increments minor with defined number.
+     * Increments a {@code minor} version component by the specified amount.
      *
-     * @param number how many minor should be incremented
-     * @return new incremented semver
+     * @param number the amount by which to increment the {@code minor} version
+     * @return new {@link Semver} with an incremented {@code minor} version
      */
     public Semver withIncMinor(int number) {
         return Modifier.withIncMinor(this, number);
     }
 
     /**
-     * Increments patch to the next closest version.
+     * Increments {@code patch} a version component to the next closest version.
      *
-     * @return new incremented semver
+     * <p>This removes {@code pre-release} and build identifiers.
+     *
+     * @return new {@link Semver} with an incremented {@code patch} version
      */
     public Semver nextPatch() {
         return Modifier.nextPatch(this);
     }
 
     /**
-     * Increments patch with one.
+     * Increments {@code patch} version component by one.
      *
-     * @return new incremented semver
+     * @return new {@link Semver} with an incremented {@code patch} version
      */
     public Semver withIncPatch() {
         return withIncPatch(1);
     }
 
     /**
-     * Increments patch with defined number.
+     * Increments {@code patch} version component by the specified amount.
      *
-     * @param number how many patch should be incremented
-     * @return new incremented semver
+     * @param number the amount by which to increment the {@code patch} version
+     * @return new {@link Semver} with an incremented {@code patch} version
      */
     public Semver withIncPatch(int number) {
         return Modifier.withIncPatch(this, number);
     }
 
     /**
-     * Sets pre-release version.
+     * Sets {@code pre-release} version identifier.
      *
-     * @param preRelease version to set
-     * @return semver with new pre-release
+     * @param preRelease the {@code pre-release} identifier to set
+     * @return new {@link Semver} with the specified {@code pre-release} identifier
      */
-    public Semver withPreRelease(final String preRelease) {
+    public Semver withPreRelease(String preRelease) {
         return Modifier.withPreRelease(this, preRelease);
     }
 
     /**
-     * Sets build version.
+     * Sets {@code build} version identifier.
      *
-     * @param build version to set
-     * @return semver with new build
+     * @param build the {@code build} identifier to set
+     * @return new {@link Semver} with the specified {@code build} identifier
      */
-    public Semver withBuild(final String build) {
+    public Semver withBuild(String build) {
         return Modifier.withBuild(this, build);
     }
 
     /**
-     * Removes pre-release from semver.
+     * Removes {@code pre-release} identifiers from the version.
      *
-     * @return semver without pre-release
+     * @return new {@link Semver} without {@code pre-release} identifiers
      */
     public Semver withClearedPreRelease() {
         return Modifier.withClearedPreRelease(this);
     }
 
     /**
-     * Removes build from semver.
+     * Removes {@code build} identifiers from the version.
      *
-     * @return semver without build
+     * @return new {@link Semver} without {@code build} identifiers
      */
     public Semver withClearedBuild() {
         return Modifier.withClearedBuild(this);
     }
 
     /**
-     * Removes both pre-release and build from semver.
+     * Removes both {@code pre-release} and {@code build} identifiers from the version.
      *
-     * @return semver without pre-release and build
+     * @return new {@link Semver} without {@code pre-release} and {@code build} identifiers
      */
     public Semver withClearedPreReleaseAndBuild() {
         return Modifier.withClearedPreReleaseAndBuild(this);
     }
 
+    /**
+     * Compares this version with another version according to SemVer precedence rules.
+     *
+     * @param other the version to compare with
+     * @return a negative integer, zero, or a positive integer as this version is less than, equal to, or greater than
+     *     the specified version
+     */
     @Override
-    public int compareTo(final Semver other) {
+    public int compareTo(Semver other) {
         return Comparator.compareTo(this, other);
     }
 
     /**
      * Checks whether the given version is API compatible with this version.
+     *
+     * <p>API compatibility means the versions differ only in {@code minor}, {@code patch}, {@code pre-release}, or
+     * {@code build} components.
+     *
+     * @param version version string to check for compatibility
+     * @return {@code true} if the versions are API compatible, {@code false} otherwise
+     * @see #isApiCompatible(Semver)
      */
-    public boolean isApiCompatible(final String version) {
-        return diff(version).ordinal() < VersionDiff.MAJOR.ordinal();
+    public boolean isApiCompatible(String version) {
+        return isApiCompatible(new Semver(version));
     }
 
     /**
      * Checks whether the given version is API compatible with this version.
+     *
+     * <p>API compatibility means the versions differ only in {@code minor}, {@code patch}, {@code pre-release}, or
+     * {@code build} components.
+     *
+     * @param version version object to check for compatibility
+     * @return {@code true} if the versions are API compatible, {@code false} otherwise
+     * @see #isApiCompatible(String)
      */
-    @SuppressWarnings("unused")
-    public boolean isApiCompatible(final Semver version) {
+    public boolean isApiCompatible(Semver version) {
         return diff(version).ordinal() < VersionDiff.MAJOR.ordinal();
     }
 
     /**
-     * Checks if the version is greater than another version.
+     * Checks if this version is greater than another version.
      *
-     * @param version version to compare
-     * @return {@code true} if the current version is greater than the provided version, {@code false} otherwise
+     * @param version version string to compare with
+     * @return {@code true} if this version is greater than the provided version, {@code false} otherwise
      * @see #isGreaterThan(Semver)
      */
-    public boolean isGreaterThan(final String version) {
+    public boolean isGreaterThan(String version) {
         return isGreaterThan(new Semver(version));
     }
 
     /**
-     * Checks if the version is greater than another version.
+     * Checks if this version is greater than another version.
      *
-     * @param version version to compare
-     * @return {@code true} if the current version is greater than the provided version, {@code false} otherwise
+     * @param version version object to compare with
+     * @return {@code true} if this version is greater than the provided version, {@code false} otherwise
      * @see #isGreaterThan(String)
      */
-    public boolean isGreaterThan(final Semver version) {
+    public boolean isGreaterThan(Semver version) {
         return compareTo(version) > 0;
     }
 
     /**
-     * Checks if the version is greater than or equal to another version.
+     * Checks if this version is greater than or equal to another version.
      *
-     * @param version version to compare
-     * @return {@code true} if the current version is greater than or equal to the provided version, {@code false} otherwise
+     * @param version version string to compare with
+     * @return {@code true} if this version is greater than or equal to the provided version, {@code false} otherwise
      * @see #isGreaterThanOrEqualTo(Semver)
      */
-    public boolean isGreaterThanOrEqualTo(final String version) {
+    public boolean isGreaterThanOrEqualTo(String version) {
         return isGreaterThanOrEqualTo(new Semver(version));
     }
 
     /**
-     * Checks if the version is greater than or equal to another version.
+     * Checks if this version is greater than or equal to another version.
      *
-     * @param version version to compare
-     * @return {@code true} if the current version is greater than or equal to the provided version, {@code false} otherwise
-     * @see #isLowerThan(String)
+     * @param version version object to compare with
+     * @return {@code true} if this version is greater than or equal to the provided version, {@code false} otherwise
+     * @see #isGreaterThanOrEqualTo(String)
      */
-    public boolean isGreaterThanOrEqualTo(final Semver version) {
+    public boolean isGreaterThanOrEqualTo(Semver version) {
         return compareTo(version) >= 0;
     }
 
     /**
-     * Checks if the version is lower than another version.
+     * Checks if this version is lower than another version.
      *
-     * @param version version to compare
-     * @return {@code true} if the current version is lower than the provided version, {@code false} otherwise
+     * @param version version string to compare with
+     * @return {@code true} if this version is lower than the provided version, {@code false} otherwise
      * @see #isLowerThan(Semver)
      */
-    public boolean isLowerThan(final String version) {
+    public boolean isLowerThan(String version) {
         return isLowerThan(new Semver(version));
     }
 
     /**
-     * Checks if the version is lower than another version.
+     * Checks if this version is lower than another version.
      *
-     * @param version version to compare
-     * @return {@code true} if the current version is lower than the provided version, {@code false} otherwise
+     * @param version version object to compare with
+     * @return {@code true} if this version is lower than the provided version, {@code false} otherwise
      * @see #isLowerThan(String)
      */
-    public boolean isLowerThan(final Semver version) {
+    public boolean isLowerThan(Semver version) {
         return compareTo(version) < 0;
     }
 
     /**
-     * Checks if the version is lower than or equal to another version.
+     * Checks if this version is lower than or equal to another version.
      *
-     * @param version version to compare
-     * @return {@code true} if the current version is lower than or equal to the provided version, {@code false} otherwise
+     * @param version version string to compare with
+     * @return {@code true} if this version is lower than or equal to the provided version, {@code false} otherwise
      * @see #isLowerThanOrEqualTo(Semver)
      */
-    public boolean isLowerThanOrEqualTo(final String version) {
+    public boolean isLowerThanOrEqualTo(String version) {
         return isLowerThanOrEqualTo(new Semver(version));
     }
 
     /**
-     * Checks if the version is lower than or equal to another version.
+     * Checks if this version is lower than or equal to another version.
      *
-     * @param version version to compare
-     * @return {@code true} if the current version is lower than or equal to the provided version, {@code false} otherwise
+     * @param version version object to compare with
+     * @return {@code true} if this version is lower than or equal to the provided version, {@code false} otherwise
      * @see #isLowerThanOrEqualTo(String)
      */
-    public boolean isLowerThanOrEqualTo(final Semver version) {
+    public boolean isLowerThanOrEqualTo(Semver version) {
         return compareTo(version) <= 0;
     }
 
     /**
-     * Checks if the version equals (exact compare) another version.
+     * Checks if this version exactly equals another version (including {@code pre-release} and {@code build}
+     * identifiers).
      *
-     * @param version version to compare
-     * @return {@code true} if the current version equals the provided version, {@code false} otherwise
+     * @param version version string to compare with
+     * @return {@code true} if this version exactly equals the provided version, {@code false} otherwise
      * @see #isEqualTo(Semver)
      */
-    public boolean isEqualTo(final String version) {
+    public boolean isEqualTo(String version) {
         return isEqualTo(new Semver(version));
     }
 
     /**
-     * Checks if the version equals (exact compare) another version.
+     * Checks if this version exactly equals another version (including {@code pre-release} and {@code build}
+     * identifiers).
      *
-     * @param version version to compare
-     * @return {@code true} if the current version equals the provided version, {@code false} otherwise
+     * @param version version object to compare with
+     * @return {@code true} if this version exactly equals the provided version, {@code false} otherwise
      * @see #isEqualTo(String)
      */
-    public boolean isEqualTo(final Semver version) {
+    public boolean isEqualTo(Semver version) {
         return equals(version);
     }
 
     /**
-     * Checks if the version equals another version, without taking the build into account.
+     * Checks if this version equals another version ignoring {@code build} identifiers.
      *
-     * @param version version to compare
-     * @return {@code true} if the current version equals the provided version (build excluded), {@code false} otherwise
+     * <p>This comparison includes all version components except {@code build} metadata.
+     *
+     * @param version version string to compare with
+     * @return {@code true} if this version equals the provided version (ignoring build), {@code false} otherwise
      * @see #isEquivalentTo(Semver)
      */
-    public boolean isEquivalentTo(final String version) {
+    public boolean isEquivalentTo(String version) {
         return isEquivalentTo(new Semver(version));
     }
 
     /**
-     * Checks if the version equals another version, without taking the build into account.
+     * Checks if this version equals another version ignoring {@code build} identifiers.
      *
-     * @param version version to compare
-     * @return {@code true} if the current version equals the provided version (build excluded), {@code false} otherwise
+     * <p>This comparison includes all version components except {@code build} metadata.
+     *
+     * @param version version object to compare with
+     * @return {@code true} if this version equals the provided version (ignoring build), {@code false} otherwise
      * @see #isEquivalentTo(String)
      */
-    public boolean isEquivalentTo(final Semver version) {
+    public boolean isEquivalentTo(Semver version) {
         return compareTo(version) == 0;
     }
 
     /**
-     * Returns the <b>greatest</b> difference between two versions.<br>
-     * example, if the current version is {@code 1.2.3} and compared version is {@code 1.3.0}, the biggest difference
-     * is the <b>MINOR</b> number.
+     * Returns the greatest difference between this version and another version.
      *
-     * @param version version to compare
-     * @return the greatest difference
+     * <p>For example, if this version is {@code 1.2.3} and compared version is {@code 1.3.0}, the greatest difference
+     * is the {@code MINOR} component.
+     *
+     * @param version version string to compare with
+     * @return the greatest difference as a {@link VersionDiff} enum value
      * @see #diff(Semver)
      */
-    public VersionDiff diff(final String version) {
+    public VersionDiff diff(String version) {
         return diff(new Semver(version));
     }
 
     /**
-     * Returns the <b>greatest</b> difference between two versions.<br>
-     * For example, if the current version is {@code 1.2.3} and compared version is {@code 1.3.0}, the biggest difference
-     * is the <b>MINOR</b> number.
+     * Returns the greatest difference between this version and another version.
      *
-     * @param version version to compare
-     * @return the greatest difference
+     * <p>For example, if this version is {@code 1.2.3} and compared version is {@code 1.3.0}, the greatest difference
+     * is the {@code MINOR} component.
+     *
+     * @param version version object to compare with
+     * @return the greatest difference as a {@link VersionDiff} enum value
      * @see #diff(String)
      */
-    public VersionDiff diff(final Semver version) {
+    public VersionDiff diff(Semver version) {
         return Differ.diff(this, version);
     }
 
     /**
-     * Check if the version satisfies a range. Defaults to not including prereleases.
+     * Checks if this version satisfies the specified version range.
      *
-     * @param range range
-     * @return {@code true} if the version satisfies the range, {@code false} otherwise
-     * @see #satisfies(RangesList)
-     * @see #satisfies(RangesExpression)
+     * <p>By default, {@code pre-release} versions are not included in the check.
+     *
+     * @param range version range expression to check against
+     * @return {@code true} if this version satisfies the range, {@code false} otherwise
+     * @see #satisfies(RangeList)
+     * @see #satisfies(RangeExpression)
      */
-    public boolean satisfies(final String range) {
+    public boolean satisfies(String range) {
         return satisfies(range, false);
     }
 
     /**
-     * Check if the version satisfies a range with an option to include prereleases.
+     * Checks if this version satisfies the specified version range.
      *
-     * @param range             version range expression to check against
-     * @param includePrerelease whether to include prereleases in the check
-     * @return {@code true} if the version satisfies the range, {@code false} otherwise
+     * <p>Allows control over whether {@code pre-release} versions are included in the check.
+     *
+     * @param range version range expression to check against
+     * @param includePreRelease whether to include {@code pre-releases} in the check
+     * @return {@code true} if this version satisfies the range, {@code false} otherwise
      * @see #satisfies(String)
-     * @see #satisfies(RangesList)
+     * @see #satisfies(RangeList)
      * @since 5.8.0
      */
-    public boolean satisfies(final String range, boolean includePrerelease) {
-        RangesList rangesList = RangesListFactory.create(range, includePrerelease);
-        return satisfies(rangesList);
+    public boolean satisfies(String range, boolean includePreRelease) {
+        RangeList rangeList = RangeListFactory.create(range, includePreRelease);
+        return satisfies(rangeList);
     }
 
     /**
-     * Check if the version build by expressions satisfies a range.
+     * Checks if this version satisfies the specified ranges expression.
      *
-     * @param rangesExpression build via internal expressions mechanism
-     * @return {@code true} if the version satisfies the range, {@code false} otherwise
-     * @see RangesExpression
+     * @param rangeExpression ranges expression built via internal expressions mechanism
+     * @return {@code true} if this version satisfies the range, {@code false} otherwise
+     * @see RangeExpression
      * @see #satisfies(String)
-     * @see #satisfies(RangesList)
+     * @see #satisfies(RangeList)
      * @since 4.2.0
      */
-    public boolean satisfies(final RangesExpression rangesExpression) {
-        RangesList rangesList = RangesListFactory.create(rangesExpression);
-        return satisfies(rangesList);
+    public boolean satisfies(RangeExpression rangeExpression) {
+        RangeList rangeList = RangeListFactory.create(rangeExpression);
+        return satisfies(rangeList);
     }
 
     /**
-     * Check if the version satisfies a ranges list.
+     * Checks if this version satisfies the specified ranges list.
      *
-     * @param rangesList list with the ranges
-     * @return {@code true} if the version satisfies the ranges list, {@code false} otherwise
+     * @param rangeList list of version ranges to check against
+     * @return {@code true} if this version satisfies the ranges list, {@code false} otherwise
      * @see #satisfies(String)
-     * @see #satisfies(RangesExpression)
+     * @see #satisfies(RangeExpression)
      */
-    public boolean satisfies(final RangesList rangesList) {
-        return rangesList.isSatisfiedBy(this);
+    public boolean satisfies(RangeList rangeList) {
+        return rangeList.isSatisfiedBy(this);
     }
 
     /**
-     * Format {@link Semver} object using custom formatting rules.
+     * Formats this version using a custom formatter function.
+     *
+     * @param formatter function that converts a {@link Semver} to a formatted string
+     * @return the formatted version string
      */
     public String format(Function<Semver, String> formatter) {
         return formatter.apply(this);
     }
 
     @Override
-    public boolean equals(final @Nullable Object o) {
+    public boolean equals(@Nullable Object o) {
         if (this == o) {
             return true;
         }
@@ -589,20 +657,29 @@ public class Semver implements Comparable<Semver> {
     }
 
     /**
-     * The types of diffs between two versions. The higher the ordinal value of the enum is, the greater is the diff.
+     * The types of differences between the two versions.
+     *
+     * <p>The higher the ordinal value of the enum, the greater the difference between versions.
      */
     public enum VersionDiff {
+        /** No difference between versions */
         NONE,
+        /** Versions differ only in {@code build} metadata */
         BUILD,
+        /** Versions differ in {@code pre-release} identifiers */
         PRE_RELEASE,
+        /** Versions differ in {@code patch} version */
         PATCH,
+        /** Versions differ in {@code minor} version */
         MINOR,
+        /** Versions differ in {@code major} version */
         MAJOR
     }
 
     /**
-     * A builder for creating a {@link Semver}.<br>
-     * It also provides a string representation of the version through {@link Builder#toVersion()}.
+     * A builder for creating {@link Semver} instances.
+     *
+     * <p>This builder allows constructing versions programmatically.
      *
      * @since 5.3.0
      */
@@ -613,71 +690,133 @@ public class Semver implements Comparable<Semver> {
         private List<String> preRelease = emptyList();
         private List<String> build = emptyList();
 
+        /**
+         * Sets the {@code major} version component.
+         *
+         * @param major the major version number
+         * @return this builder instance
+         */
         public Builder withMajor(int major) {
             this.major = major;
             return this;
         }
 
+        /**
+         * Sets the {@code minor} version component.
+         *
+         * @param minor the minor version number
+         * @return this builder instance
+         */
         public Builder withMinor(int minor) {
             this.minor = minor;
             return this;
         }
 
+        /**
+         * Sets the {@code patch} version component.
+         *
+         * @param patch the patch version number
+         * @return this builder instance
+         */
         public Builder withPatch(int patch) {
             this.patch = patch;
             return this;
         }
 
-        @SuppressWarnings("unused")
+        /**
+         * Sets a single {@code pre-release} identifier.
+         *
+         * @param preRelease the {@code pre-release} identifier
+         * @return this builder instance
+         * @throws NullPointerException if preRelease is {@code null}
+         */
         public Builder withPreRelease(String preRelease) {
             requireNonNull(preRelease, "preRelease cannot be null");
-            return withPreReleases(new String[]{preRelease});
+            return withPreReleases(List.of(preRelease));
         }
 
+        /**
+         * Sets multiple {@code pre-release} identifiers from a collection.
+         *
+         * @param preReleases collection of {@code pre-release} identifiers
+         * @return this builder instance
+         * @throws NullPointerException if preReleases is {@code null}
+         */
         public Builder withPreReleases(Collection<String> preReleases) {
-            requireNonNull(preReleases, "preRelease cannot be null");
-            this.preRelease = new ArrayList<>(preReleases);
-            return this;
-        }
-
-        public Builder withPreReleases(String[] preReleases) {
-            requireNonNull(preReleases, "preRelease cannot be null");
-            this.preRelease = Arrays.asList(preReleases);
-            return this;
-        }
-
-        @SuppressWarnings("unused")
-        public Builder withBuild(String build) {
-            requireNonNull(build, "build cannot be null");
-            return withBuilds(new String[]{build});
-        }
-
-        public Builder withBuilds(Collection<String> builds) {
-            requireNonNull(builds, "builds cannot be null");
-            this.build = new ArrayList<>(builds);
-            return this;
-        }
-
-        public Builder withBuilds(String[] builds) {
-            requireNonNull(builds, "builds cannot be null");
-            this.build = Arrays.asList(builds);
+            requireNonNull(preReleases, "preReleases cannot be null");
+            this.preRelease = List.copyOf(preReleases);
             return this;
         }
 
         /**
-         * Build a {@link Semver} object.
+         * Sets multiple {@code pre-release} identifiers from varargs.
+         *
+         * @param preReleases array of {@code pre-release} identifiers
+         * @return this builder instance
+         * @throws NullPointerException if preReleases is {@code null}
          */
-        public Semver toSemver() {
+        public Builder withPreReleases(String... preReleases) {
+            requireNonNull(preReleases, "preReleases cannot be null");
+            this.preRelease = List.of(preReleases);
+            return this;
+        }
+
+        /**
+         * Sets a single {@code build} identifier.
+         *
+         * @param build the {@code build} identifier
+         * @return this builder instance
+         * @throws NullPointerException if build is {@code null}
+         */
+        public Builder withBuild(String build) {
+            requireNonNull(build, "build cannot be null");
+            return withBuilds(List.of(build));
+        }
+
+        /**
+         * Sets multiple {@code build} identifiers from a collection.
+         *
+         * @param builds collection of {@code build} identifiers
+         * @return this builder instance
+         * @throws NullPointerException if builds is {@code null}
+         */
+        public Builder withBuilds(Collection<String> builds) {
+            requireNonNull(builds, "builds cannot be null");
+            this.build = List.copyOf(builds);
+            return this;
+        }
+
+        /**
+         * Sets multiple {@code build} identifiers from varargs.
+         *
+         * @param builds array of {@code build} identifiers
+         * @return this builder instance
+         * @throws NullPointerException if builds is {@code null}
+         */
+        public Builder withBuilds(String... builds) {
+            requireNonNull(builds, "builds cannot be null");
+            this.build = List.of(builds);
+            return this;
+        }
+
+        /**
+         * Builds a new {@link Semver} instance from this builder's configuration.
+         *
+         * @return a new {@link Semver} instance
+         */
+        public Semver build() {
             String version = toVersion();
             return new Semver(version);
         }
 
         /**
-         * Build a string representation of the version.<p>
-         * It follows a semver specification which results in:
-         * {@code 1.2.3-alpha+5bb76cdb}
+         * Builds a string representation of the version.
+         *
+         * <p>Follows the SemVer specification format: {@code MAJOR.MINOR.PATCH[-PRERELEASE][+BUILD]}
+         *
+         * @return the formatted version string
          */
-        public String toVersion() {
+        private String toVersion() {
             String resultVersion = String.format(Locale.ROOT, "%d.%d.%d", major, minor, patch);
             if (!preRelease.isEmpty()) {
                 resultVersion += "-" + join(".", preRelease);
@@ -686,13 +825,6 @@ public class Semver implements Comparable<Semver> {
                 resultVersion += "+" + join(".", build);
             }
             return resultVersion;
-        }
-
-        /**
-         * Format {@link Semver} object using custom formatting rules.
-         */
-        public String toVersion(Function<Semver, String> formatter) {
-            return formatter.apply(toSemver());
         }
     }
 }
